# shrimpl-language

./: Cargo.toml  LICENSE  README.md  app.shr  replit.nix
.github/workflows/: ci-non-main.yml
config/: config.dev.json
src/: ast.rs  config.rs  docs.rs  lib.rs  loader.rs  lockfile.rs  main.rs  typecheck.rs
src/interpreter/: eval.rs  http.rs  mod.rs
src/parser/: expr.rs  mod.rs
src/shrimpl-lsp/: code_actions.rs  completion.rs  definition.rs  diagnostics.rs  formatting.rs  hover.rs  mod.rs  semantic_tokens.rs  signature.rs
