[package]
name = "shrimpl"
version = "0.5.0"
edition = "2021"

# Crate metadata for distribution
description = "Shrimpl 0.5 – a beginner-friendly API / data / ML scripting language with a Rust runtime and LSP support."
license = "MIT"
repository = "https://github.com/adl5423/shrimpl-language"
homepage = "https://github.com/adl5423/shrimpl-language"
documentation = "https://github.com/adl5423/shrimpl-language#readme"
readme = "README.md"

keywords = ["language", "education", "api", "web", "lsp"]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::build-utils",
    "web-programming::http-server",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2.8"
pest_derive = "2.8"
logos = "0.13"
ureq = "2"
csv = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"

# If actix-web pulls in tokio, we still explicitly enable "full"
# here so the LSP runtime has everything it needs.

[[bin]]
name = "shrimpl"
path = "src/main.rs"

[[bin]]
name = "shrimpl-lsp"
path = "src/bin/shrimpl_lsp.rs"
